# infoscribe

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  scrape_books.py  scrape_hn.py
backend/app/: main.py
backend/app/core/: config.py  middlewares.py
backend/app/endpoints/: books.py  headlines.py
backend/app/models/: schemas.py
backend/app/scraping/: scrape_books.py  scrape_hn.py
backend/app/services/: headlines_service.py  redis_service.py
backend/app/tests/: conftest.py  test_books.py  test_headlines.py  test_redis.py
backend/tests/: conftest.py  test_books.py  test_headlines.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf
frontend/src/: App.jsx  index.css
frontend/src/components/: BookCard.jsx  ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx  ErrorToast.jsx  Header.jsx  NewsCard.jsx  ThemeToggle.jsx  VoiceInput.jsx
frontend/src/contexts/: chat-context.js  theme-context.js
frontend/src/providers/: ChatProvider.jsx  ThemeProvider.jsx
frontend/src/services/: api.js
workflows/: n8n_credentials.json  n8n_workflow.json
